--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <dbcp.version>1.4</dbcp.version>
     <!--<druid.version>1.0.9</druid.version>-->
     <slf4j.version>1.6.4</slf4j.version>
-    <jackson.version>2.4.2</jackson.version>
+    <jackson.version>2.8.5</jackson.version>
     <jstl.version>1.2</jstl.version>
     <servlet-api.version>2.5</servlet-api.version>
     <jsp-api.version>2.0</jsp-api.version>
@@ -130,6 +130,16 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
       <version>${jackson.version}</version>
     </dependency>
     <!-- JSP相关 -->
